# Brainfuck

./: README.md  configurations.py  constants.py  interpreter.py  pyproject.toml  rules.py  sequence.py  test.txt
Userfiles/: scdefspub.sty  template.tex  test.aux  test.tex
frontend/: miktex.py  model.py  ui.py
model/: linter.py  miktex.py  model.py  ui.py
sosrules/: comma.py  comp.py  dot.py  left.py  loop.py  minus.py  plus.py  right.py
