[tool.poetry]
name = "SR Interpreter"
version = "0.1"
description = "An interpreter for Brainfuck programs"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
